turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:4: error: STOP is already defined as value STOP
val STOP = 0
    ^Turmite:4: error: STOP  is already defined as value STOP
val STOP = 0
    ^Turmite:14: error: type mismatch;
 found   : java.awt.Color
 required: Int
  var nextColor = rule(state)(couleurActuelle)(0)
                              ^Turmite:16: error: type mismatch;
 found   : java.awt.Color
 required: Int
  var mvtSuiv = rule(state)(couleurActuelle)(1)
                            ^Turmite:28: error: type mismatch;
 found   : java.awt.Color
 required: Int
  state = rule(state)(couleurActuelle)(2)
                      ^